# substance_to_xiv

./: .editorconfig  .gitignore  BCn.md  BUILD.md  README.md  pyproject.toml
assets/: demo.avif
src/substance_to_xiv/: __init__.py  convert.py  penumbra.py  settings.py
tools/: build.py
